# ms-core

src/: .gn  BUILD.gn  README.md  ms_build.py
src/build_overrides/: build.gni  webrtc.gni
src/tools_ms/android/: build_aar.py
